# Pagh-OS

./: .gitignore  CONTRIBUTING.en.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  boot_net_bg.cmd  boot_qemu_bg.cmd  boot_virtio_bg.cmd  build_iso.cmd  gen_fixtures.py  linker-riscv.ld  linker.ld  run.cmd  run_rv.cmd  x86_64-unknown-none.json
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
boot/: limine.conf
docs/: README.md
host-tests/: Cargo.toml
host-tests/.cargo/: config.toml
host-tests/src/: bigindex.rs  lib.rs
host-tests/src/properties/: p01.rs  p02.rs  p03.rs  p04.rs  p05.rs  p06.rs  p07.rs  p08.rs  p09.rs  p10.rs  p11.rs  p12.rs  p13.rs  p14.rs  p15.rs  p16.rs  p17.rs  p18.rs  p19.rs  p20.rs  p21.rs  p22.rs  p23.rs  p24.rs  p25.rs  p26.rs  p27.rs  p28.rs  p29.rs  p29_fixtures.rs  p30.rs  p31.rs  p32.rs  p33.rs  p34.rs  p35.rs  p36.rs  p37.rs  p38.rs  p39.rs  (+2 more)
rv/: Cargo.toml  linker.ld
rv/.cargo/: config.toml
rv/src/: blk.rs  cpu.rs  dtb.rs  main.rs  net.rs  paging.rs  pmm.rs  ramfs.rs  sbi.rs  sched.rs  shell.rs  trap.rs  uart.rs  umode.rs
src/: blk.rs  boot.rs  cpu.rs  dtb.rs  heap.rs  lib.rs  log.rs  paging.rs  plic.rs  pmm.rs  ramfs.rs  sbi.rs  sched.rs  selftest_lx.rs  test.rs  umode.rs
src/arch/: cpu.rs  mod.rs
src/arch/riscv64/: blk.rs  boot.rs  elf.rs  timer.rs  trap.rs
src/arch/x86_64/: acpi.rs  apic.rs  gdt.rs  idt.rs  mod.rs  syscall.rs
src/arch/x86_64/linux/: abi.rs  diag.rs  dirent.rs  errno.rs  io.rs  io_sys.rs  mem.rs  mem_sys.rs  misc.rs  mod.rs  rand_clock.rs  regs.rs  rtc.rs  stat.rs  timeconv.rs  validate.rs
src/debug/: unwind.rs
src/drivers/: cursor.rs  framebuffer.rs  mod.rs  ps2_kbd.rs  ps2_mouse.rs  serial.rs
src/drivers/pci/: mod.rs
src/drivers/virtio/: blk.rs  hal.rs  mod.rs
src/fs/: journal.rs  mod.rs
src/fs/ext2/: alloc.rs  dir.rs  inode.rs  mod.rs  structs.rs
src/memory/: heap.rs  layout.rs  mod.rs  pmm.rs  vmm.rs
src/net/: dns.rs  http.rs  http_fetch.rs  mod.rs  phy.rs  progress.rs  tls.rs
src/pkg/: apt.rs  apt_index.rs  apt_resolve.rs  deb.rs  install.rs  install_fs.rs  mirror.rs  mod.rs  tar.rs
src/shell/: commands.rs  complete.rs  editor.rs  history.rs  keys.rs  mod.rs  paint.rs  path.rs  registry.rs  render.rs  suggest.rs
src/sync/: mod.rs  spinlock.rs
src/task/: compat.rs  fd.rs  fd_alloc.rs  mod.rs  process.rs  scheduler.rs  stack.rs  stack_map.rs  switch.rs
src/vfs/: elf.rs  elf_classify.rs  mod.rs
tools/: e2e_bigindex.ps1  e2e_live_update.ps1  e2e_local_mirror.ps1  mini_repo.py  smoke_assertions.ps1
tools/mini_repo/dists/stable/: Release
tools/mini_repo/dists/stable/main/binary-amd64/: Packages
tools/mini_repo/pool/main/h/hello-pagh/: hello-pagh_1.0_amd64.deb
