[package]
name = "pagh"
version = "0.1.0"
edition = "2021"

[workspace]
# `host-tests` is an isolated host crate for proptest-based property tests. It must
# NOT be a member of the kernel workspace: the kernel builds for the bare-metal
# target `x86_64-unknown-none.json` (see .cargo/config.toml), while host-tests builds
# and runs on the native host. Excluding it lets host-tests carry its own config and
# lockfile without affecting the kernel build.
exclude = ["host-tests"]

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"

[dependencies]
limine = "0.6"
spin = "0.9"
x86_64 = "0.15"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
bitflags = "2.6"
uart_16550 = "0.3"
volatile = "0.6"
linked_list_allocator = "0.10"
virtio-drivers = { version = "0.11", default-features = false, features = ["alloc"] }

[dependencies.acpi]
version = "5.0"
default-features = false
features = ["allocator_api"]

[dependencies.smoltcp]
version = "0.12"
default-features = false
features = ["alloc", "medium-ethernet", "proto-ipv4", "proto-dhcpv4", "socket-icmp", "socket-udp", "socket-tcp", "socket-dhcpv4"]

# Host-only property-testing dependency. Dev-dependencies are NEVER compiled by
# `cargo build`, so this does not touch the no_std kernel build or the custom target.
# proptest requires `std`; the kernel cannot be host-compiled, so the actual host
# property tests live in the excluded `host-tests` crate (which has its own proptest
# dev-dependency and host target). This entry documents the kernel's intended PBT
# tool and keeps it pinned in the lockfile.
[dev-dependencies]
proptest = "1"
