[package]
name = "pagh"
version = "0.1.0"
edition = "2021"

[workspace]
# `host-tests` is an isolated host crate for proptest-based property tests. It must
# NOT be a member of the kernel workspace: the kernel builds for the bare-metal
# target `x86_64-unknown-none.json` (see .cargo/config.toml), while host-tests builds
# and runs on the native host. Excluding it lets host-tests carry its own config and
# lockfile without affecting the kernel build.
exclude = ["host-tests"]

[lib]
crate-type = ["staticlib"]

[features]
# Boot-time Linux-compat self-test harness. OFF by default: when unset the
# `selftest_lx` module is not compiled and `boot::kernel_main` does not call it,
# so the normal boot/shell is unchanged. Build with `cargo build --features
# lx_selftest` to enable the on-target LXSELFTEST checks.
lx_selftest = []

# Live full-update integration check (spec full-debian-apt-update task 11.1).
# OFF by default and SEPARATE from `lx_selftest`: when set, `boot::kernel_main`
# spawns `selftest_lx::run_live_update_check`, which runs the full `apt update`
# against the live `deb.debian.org` mirror (HTTPS) and then installs+runs
# `busybox-static`. It does NOT run the local-mirror selftest harness. Build with
# `cargo build --features lx_livetest`. Network-dependent and slow under QEMU/TCG.
lx_livetest = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"

[dependencies]
limine = "0.6"
spin = "0.9"
x86_64 = "0.15"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
bitflags = "2.6"
uart_16550 = "0.3"
volatile = "0.6"
linked_list_allocator = "0.10"
virtio-drivers = { version = "0.11", default-features = false, features = ["alloc"] }
# Pure-Rust DEFLATE inflate for `.deb` `data.tar.gz` decompression (R9.3, task 8.3).
# Pinned exactly; `default-features = false` + `with-alloc` keeps it no_std and routed
# through the `alloc` crate (no `std`, no C toolchain), so it builds for the bare-metal
# `x86_64-unknown-none` target. Used by `pkg::deb::decompress_data`.
miniz_oxide = { version = "=0.8.9", default-features = false, features = ["with-alloc"] }
# Pure-Rust zstd decoder for `.deb` `data.tar.zst` (R9.4). `default-features = false`
# drops the crate's `std` and `hash` (twox-hash) features, leaving the core + `alloc`
# decode path, so it builds for the bare-metal `x86_64-unknown-none` target. The
# frame `StreamingDecoder` + the crate's own `ruzstd::io::Read` trait are used by
# `pkg::deb::decompress_data`. Pinned exactly.
ruzstd = { version = "=0.8.3", default-features = false }
# Pure-Rust, no_std XZ (LZMA2) decoder for `.deb` `data.tar.xz` (R9.4). It is a port
# of xz-embedded with effectively no unsafe in the decode path. `default-features =
# false` drops `std`; we keep `alloc` (heap-allocated dictionary), `bcj` (executable
# filters common in distro .xz), `delta`, and `crc64` (the xz CLI default check) so
# real distro `data.tar.xz` members decode. `XzDecoder` is driven by
# `pkg::deb::decompress_data`. Pinned exactly.
xz4rust = { version = "=0.2.1", default-features = false, features = ["alloc", "bcj", "delta", "crc64"] }
# ── HTTPS / TLS 1.3 (VARIANT A: encrypted transport, NO certificate verification) ──
# `embedded-tls` is the maintained no_std Rust TLS 1.3 implementation (formerly
# drogue-tls). Pinned exactly; `default-features = false` drops its `std`/`log`/
# `tokio` defaults, and the `alloc` feature routes its heap use through the `alloc`
# crate so it builds for the bare-metal `x86_64-unknown-none` target. It pulls a
# no_std + alloc crypto stack (sha2/hmac/hkdf/aes-gcm/p256/ecdsa/rand_core); the
# `alloc` feature also makes `TlsConfig::new()` advertise RSA *and* ECDSA signature
# schemes, so real Debian mirrors (Fastly, ECDSA or RSA leaf certs) negotiate.
#
# SECURITY: we drive it through `UnsecureProvider` (the `NoVerify` path) — the
# server certificate chain, hostname, and expiry are NOT checked. This gives an
# encrypted channel only; it is NOT authenticated and is trivially MITM-able. See
# `src/net/tls.rs` for the full warning. Certificate verification is a follow-up.
embedded-tls = { version = "=0.19.0", default-features = false, features = ["alloc"] }
# Sync + async byte-IO traits implemented by the smoltcp TCP transport adapter in
# `src/net/tls.rs`. `embedded-tls` speaks `embedded-io-async`; the adapter bridges
# it to the smoltcp socket pump, driven to completion by a tiny `block_on`. Pinned
# to the versions `embedded-tls` itself depends on so cargo unifies a single copy.
embedded-io = { version = "=0.7.1", default-features = false }
embedded-io-async = { version = "=0.7.0", default-features = false }
# `rand_core` (0.6) traits (`RngCore` + `CryptoRng`) that `embedded-tls` requires
# of its RNG. `src/net/tls.rs` implements them over the kernel entropy source.
# WEAK: that source is a non-cryptographic xorshift (see the module docs).
rand_core = { version = "=0.6.4", default-features = false }

[dependencies.acpi]
version = "5.0"
default-features = false
features = ["allocator_api"]

[dependencies.smoltcp]
version = "0.12"
default-features = false
features = ["alloc", "medium-ethernet", "proto-ipv4", "proto-dhcpv4", "socket-icmp", "socket-udp", "socket-tcp", "socket-dhcpv4"]

# Host-only property-testing dependency. Dev-dependencies are NEVER compiled by
# `cargo build`, so this does not touch the no_std kernel build or the custom target.
# proptest requires `std`; the kernel cannot be host-compiled, so the actual host
# property tests live in the excluded `host-tests` crate (which has its own proptest
# dev-dependency and host target). This entry documents the kernel's intended PBT
# tool and keeps it pinned in the lockfile.
[dev-dependencies]
proptest = "1"
