[package]
name = "pagh"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"

# RISC-V (riscv64gc) kernel dependencies. All no_std + alloc.
[dependencies]
# Tiny no_std spinlock (PMM, scheduler, device cells).
spin = "0.9"
# Global allocator: size-binned (~O(1)) galloc.
good_memory_allocator = "0.1"
# virtio-mmio transport + virtio-blk / virtio-net drivers.
virtio-drivers = { version = "0.11", default-features = false, features = ["alloc"] }
# Flattened-device-tree parser for OpenSBI/virt platform discovery (RAM, UART,
# PLIC/CLINT, virtio-mmio device ids).
fdt = "0.1"

[dependencies.smoltcp]
version = "0.12"
default-features = false
features = ["alloc", "medium-ethernet", "proto-ipv4", "proto-dhcpv4", "socket-dhcpv4"]
